Spent an hour adding a stupid button that had a popover to it, only to realize that it needs an API to work correclty. Fixed whitespace not line breaking.

--- a/client/css/chat.css
+++ b/client/css/chat.css
@@ -103,5 +103,5 @@
 }
 
 .chat-text {
-    white-space: pre;
+    white-space: pre-wrap;
 }
