--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1761,5 +1761,6 @@ footer {
 .image-padding {
     padding-top: 40px;
     padding-bottom: 20px;
-
 }
+
+.nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
